--- a/public/css/app.css
+++ b/public/css/app.css
@@ -114,7 +114,7 @@ main {
 
 /* media queries */
 
-@media (max-width: 992px) {
+@media (max-width:992px) {
     html {
         font-size: 55%;
     }
@@ -123,7 +123,7 @@ main {
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width:468px) and (max-width:768px) {
     header .icons #menu-bars {
         display: inline-block;
     }
