--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -3,37 +3,56 @@
     height: 100vh;
     margin: 0;
     padding: 0;
-    background-color: #63a4ff;
-    background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
+    background-color: #E84857;
+    background-image: linear-gradient(315deg, #E84857 0%, #E84857 74%);
     overflow: hidden;
 }
 
 .center {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 60%;
+    left: 10%;
     transform: translate(-50%, -50%);
     width: 400px;
-    background: white;
+    height: 80%;
+    background: #E84857;
     border-radius: 10px;
+}
+.tesst {
+    position: absolute;
+    left: 23.5%;
+    right: -1%;
+    top: -0.2%;
+    bottom: 0%;
+    width: 50%;
+    height: inherit;
+
+
+
 }
 
 .center h1 {
     text-align: center;
     padding: 20px 20px 20px 20px;
     /* padding-top: 20px; */
-    border-bottom: 1px solid silver;
+    /*border-bottom: 1px solid silver;*/
+    color: white;
+
 }
 
 .center form {
     padding: 0 40px;
     box-sizing: border-box;
+
 }
 
 form .txt_field {
     position: relative;
     border-bottom: 2px solid #adadad;
-    margin: 30px 0;
+    color: white;
+    background-color: white;
+    margin: 50px 0;
+    border-radius: 10px;
 }
 
 .txt_field input {
@@ -50,11 +69,11 @@ form .txt_field {
     position: absolute;
     top: 50%;
     left: 0px;
-    color: #adadad;
+    color: black;
     transform: translateY(-50%);
-    font-size: 16px;
+    font-size: 25px;
     pointer-events: none;
-    transition: 0.5s;
+    transition: 0.6s;
 }
 
 .txt_field span::before {
@@ -80,7 +99,7 @@ form .txt_field {
 }
 
 .pass {
-    margin: -5px 0 20px;
+    margin: -5px 0 25px;
     color: #a6a6a6;
     cursor: pointer;
 }
@@ -93,10 +112,10 @@ button[type="submit"] {
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #2691d9;
+    background: #1C3557;
     border-radius: 25px;
     font-size: 18px;
-    color: #e9f4fb;
+    color: white;
     font-weight: 700;
     cursor: pointer;
     outline: none;
@@ -111,11 +130,11 @@ button:hover {
     margin: 30px 0;
     text-align: center;
     font-size: 16px;
-    color: #666666;
+    color: white;
 }
 
 .signup_link a {
-    color: #2691d9;
+    color: white;
     text-decoration: none;
 }
 
