--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,7 @@
     outline: none;
     border: none;
     text-transform: capitalize;
-    transition: all 0.5s linear;
+    /* transition: all 0.5s linear; */
 }
 
 html {
@@ -103,34 +103,55 @@ header .icons a:hover {
 header .icons #menu-bars {
     display: none;
 }
+
+
 /*--------------------------------------About Us--------------------------------------------------------------------------*/
-.about{
 
+.about {
     background-color: beige;
-
 }
-.me{
+
+.me {
     background-image: url("/img/logo.png");
     background-repeat: no-repeat;
     background-color: beige;
     background-position: center;
     opacity: 0.6;
-
-
 }
+
+
 /*.content-footer,*/
+
+
 /*.masthead-heading,*/
+
+
 /*.masthead-intro {*/
+
+
 /*    text-align: center;*/
+
 
 /*}*/
 
+
 /*.masthead {*/
+
+
 /*    padding: 6em 0;*/
+
+
 /*    background-image: url('');*/
+
+
 /*    background-size: cover;*/
+
+
 /*    background-repeat: no-repeat;*/
+
+
 /*    border-top: solid 1em #FFCF33;*/
+
 
 /*}*/
 
@@ -141,9 +162,7 @@ header .icons #menu-bars {
     font-family: "Gentium Book Basic", Georgia, serif;
     font-size: 5em;
     opacity: 1;
-
 }
-
 
 .introduction-section,
 .location-section,
@@ -155,22 +174,20 @@ header .icons #menu-bars {
     opacity: 1;
 }
 
-.introduction-section > p,
-.location-section > p,
+.introduction-section>p,
+.location-section>p,
 .questions-section,
-.content-footer > p {
+.content-footer>p {
     /* Typography Declarations */
     font-size: 103%;
     letter-spacing: 0.05em;
-
     font-weight: bolder;
     color: #000000;
     background-color: #ffffff;
     opacity: 0.5;
-
 }
 
-.questions-section > h2 {
+.questions-section>h2 {
     font-family: "Gentium Book Basic", Georgia, serif;
     font-size: 2.5em;
     font-weight: bolder;
@@ -178,15 +195,15 @@ header .icons #menu-bars {
     margin: 2em 0 1em 0;
     opacity: 1;
     color: Black;
-
 }
 
-section > h1 {
+section>h1 {
     margin-top: 0.6em;
     color: #ff2348;
     opacity: 1;
     font-weight: bold;
 }
+
 .content-footer {
     margin: 20px 0;
     padding: 20px 0;
@@ -195,16 +212,19 @@ section > h1 {
     text-decoration: none;
     opacity: 1;
 }
-.social > li {
+
+.social>li {
     display: inline-block;
     margin: 0 5px;
     opacity: 1;
     font-weight: bold;
 }
-.content-footer > p3 {
+
+.content-footer>p3 {
     color: #F7EDE1;
     opacity: 1;
 }
+
 a {
     font-weight: bold;
     text-decoration: none;
@@ -227,7 +247,7 @@ a {
         font-size: 2em;
         opacity: 1;
     }
-    section > h1{
+    section>h1 {
         font-size: 2.5em;
     }
 }
@@ -301,6 +321,8 @@ a {
 
 
 /* media queries */
+
+
 /*---------------------------------------------------Booking Page css---------------------------------------------------------------------------------*/
 
 body {
@@ -380,7 +402,8 @@ body {
     -webkit-transition: 0.2s;
     transition: 0.2s
 }
-.custom-select{
+
+.custom-select {
     background-color: rgba(255, 255, 255, 0.2);
     height: 60px;
     padding: 0px 25px;
@@ -392,6 +415,7 @@ body {
     -webkit-transition: 0.2s;
     transition: 0.2s
 }
+
 .booking-form .form-control::-webkit-input-placeholder {
     color: rgba(255, 255, 255, 0.5)
 }
@@ -473,7 +497,8 @@ body {
     -webkit-transition: 0.2s all;
     transition: 0.2s all
 }
-.test{
+
+.test {
     position: relative;
     top: -1px;
     left: 10px;
@@ -487,7 +512,6 @@ body {
     line-height: 15px;
     -webkit-transition: 0.2s all;
     transition: 0.2s all
-
 }
 
 .booking-form .form-group.input-not-empty .form-control {
