--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -315,9 +315,9 @@ input {
 }
 
 .overlay {
-    background: #FF416C;
+    background: #EC4C5A;
     background: -webkit-linear-gradient(to right, #fc5548, #ee3361);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background: linear-gradient(to right, #ec4c5a, #FF416C);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
@@ -369,18 +369,6 @@ input {
 .social-container {
     margin: 20px 0;
 }
-
-.social-container a {
-    border: 1px solid #DDDDDD;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    height: 40px;
-    width: 40px;
-}
-
 
 
 
