--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap");
 :root {
     --primary: #e84857;
@@ -39,17 +39,17 @@ section:nth-child(even) {
     margin-top: 1rem;
     display: inline-block;
     font-size: 1.7rem;
-    color: #F7EDE1;
+    color: #f7ede1;
     background: #e84857;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     cursor: pointer;
-    padding: .8rem 3rem;
+    padding: 0.8rem 3rem;
 }
 
 .btn:hover {
     color: #ffffff;
     background: #1c3557;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
 }
 
 
@@ -130,58 +130,65 @@ header .icons a:hover {
 header .icons #menu-bars {
     display: none;
 }
+
+
 /*----------------------------------------------header search bar------------------------------------------------------------------*/
-#search-form{
+
+#search-form {
     position: fixed;
-    top:-110%; left:0;
-    height:100%; width:100%;
+    top: -110%;
+    left: 0;
+    height: 100%;
+    width: 100%;
     z-index: 1004;
-    background:rgba(0,0,0,.8);
+    background: rgba(0, 0, 0, 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding:0 1rem;
+    padding: 0 1rem;
 }
 
-#search-form.active{
-    top:0;
+#search-form.active {
+    top: 0;
 }
 
-#search-form #search-box{
-    width:50rem;
-    border-bottom: .1rem solid #fff;
-    padding:1rem 0;
-    color:#fff;
+#search-form #search-box {
+    width: 50rem;
+    border-bottom: 0.1rem solid #fff;
+    padding: 1rem 0;
+    color: #fff;
     font-size: 3rem;
     text-transform: none;
-    background:none;
+    background: none;
 }
 
-#search-form #search-box::placeholder{
-    color:#eee;
+#search-form #search-box::placeholder {
+    color: #eee;
 }
 
-#search-form #search-box::-webkit-search-cancel-button{
+#search-form #search-box::-webkit-search-cancel-button {
     -webkit-appearance: none;
 }
 
-#search-form label{
-    color:#fff;
-    cursor:pointer;
+#search-form label {
+    color: #fff;
+    cursor: pointer;
     font-size: 3rem;
 }
 
-#search-form label:hover{
-    color:var(--bs-red);
+#search-form label:hover {
+    color: var(--bs-red);
 }
 
-#search-form #close{
+#search-form #close {
     position: absolute;
-    color:#fff;
+    color: #fff;
     cursor: pointer;
-    top: 2rem; right:3rem;
+    top: 2rem;
+    right: 3rem;
     font-size: 5rem;
 }
+
 
 /*--------------------------------------Home section--------------------------------------------------------------------------*/
 
@@ -218,8 +225,13 @@ header .icons #menu-bars {
 .home .home-slider .slide .content p {
     color: var(--light-color);
     font-size: 2rem;
-    padding: .5rem 0;
+    padding: 0.5rem 0;
     line-height: 1.5;
+}
+
+.contentse {
+    color: black;
+    font-size: 5.5rem;
 }
 
 
@@ -303,14 +315,14 @@ section>h1 {
 }
 
 .content-footer>p3 {
-    color: #F7EDE1;
+    color: #f7ede1;
     opacity: 1;
 }
 
 a {
     font-weight: bold;
     text-decoration: none;
-    color: #F1C863;
+    color: #f1c863;
     opacity: 1;
 }
 
@@ -335,15 +347,114 @@ a {
 }
 
 
+/*---------------------------------------------------cart---------------------------------------------------------------------------------*/
+
+.thumbnail {
+    position: relative;
+    padding: 0px;
+    margin-bottom: 20px;
+}
+
+.thumbnail img {
+    width: 80%;
+}
+
+.thumbnail .caption {
+    margin: 7px;
+}
+
+.main-section {
+    background-color: #f8f8f8;
+}
+
+.dropdown {
+    float: right;
+    padding-right: 30px;
+}
+
+.btn {
+    border: 0px;
+    margin: 10px 0px;
+    box-shadow: none !important;
+}
+
+.dropdown .dropdown-menu {
+    padding: 20px;
+    top: 30px !important;
+    width: 350px !important;
+    left: -110px !important;
+    box-shadow: 0px 5px 30px black;
+}
+
+.total-header-section {
+    border-bottom: 1px solid #d2d2d2;
+}
+
+.total-section p {
+    margin-bottom: 20px;
+}
+
+.cart-detail {
+    padding: 15px 0px;
+}
+
+.cart-detail-img img {
+    width: 100%;
+    height: 100%;
+    padding-left: 15px;
+}
+
+.cart-detail-product p {
+    margin: 0px;
+    color: #000;
+    font-weight: 500;
+}
+
+.cart-detail .price {
+    font-size: 12px;
+    margin-right: 10px;
+    font-weight: 500;
+}
+
+.cart-detail .count {
+    color: #c2c2dc;
+}
+
+.checkout {
+    border-top: 1px solid #d2d2d2;
+    padding-top: 15px;
+}
+
+.checkout .btn-primary {
+    border-radius: 50px;
+    height: 50px;
+}
+
+.dropdown-menu:before {
+    content: " ";
+    position: absolute;
+    top: -20px;
+    right: 50px;
+    border: 10px solid transparent;
+    border-bottom-color: #fff;
+}
+
+header .icons .dropdown .cart-count {
+    position: absolute;
+    left: 35px;
+    top: 7px;
+}
+
+
 /*---------------------------------------------------Booking Page css---------------------------------------------------------------------------------*/
 
-body {
-    background-image: linear-gradient(to right, #c5a8d2, #f86374)
+.boo {
+    background-image: linear-gradient(to right, #d78897, #dec0c2);
 }
 
 .section {
     position: relative;
-    height: 100vh
+    height: 100vh;
 }
 
 .section .section-center {
@@ -352,11 +463,11 @@ body {
     left: 0;
     right: 0;
     -webkit-transform: translateY(-50%);
-    transform: translateY(-50%)
+    transform: translateY(-50%);
 }
 
 #booking {
-    font-family: 'Raleway', sans-serif
+    font-family: "Raleway", sans-serif;
 }
 
 .booking-form {
@@ -369,24 +480,24 @@ body {
     background-image: url("/img/logo.png");
     background-size: cover;
     border-radius: 5px;
-    z-index: 20
+    z-index: 20;
 }
 
 .booking-form::before {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
     background: rgba(105, 49, 49, 0.7);
-    z-index: -1
+    z-index: -1;
 }
 
 .booking-form .form-header {
     text-align: center;
     position: relative;
-    margin-bottom: 30px
+    margin-bottom: 30px;
 }
 
 .booking-form .form-header h1 {
@@ -394,12 +505,12 @@ body {
     text-transform: capitalize;
     font-size: 42px;
     margin: 0px;
-    color: #fff
+    color: #fff;
 }
 
 .booking-form .form-group {
     position: relative;
-    margin-bottom: 30px
+    margin-bottom: 30px;
 }
 
 .booking-form .form-control {
@@ -412,7 +523,7 @@ body {
     -webkit-box-shadow: 0px 0px 0px 2px transparent;
     box-shadow: 0px 0px 0px 2px transparent;
     -webkit-transition: 0.2s;
-    transition: 0.2s
+    transition: 0.2s;
 }
 
 .custom-select {
@@ -425,47 +536,47 @@ body {
     -webkit-box-shadow: 0px 0px 0px 2px transparent;
     box-shadow: 0px 0px 0px 2px transparent;
     -webkit-transition: 0.2s;
-    transition: 0.2s
+    transition: 0.2s;
 }
 
 .booking-form .form-control::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.5)
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .booking-form .form-control:-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.5)
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .booking-form .form-control::placeholder {
-    color: rgba(255, 255, 255, 0.5)
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .booking-form .form-control:focus {
     -webkit-box-shadow: 0px 0px 0px 2px #ff8846;
-    box-shadow: 0px 0px 0px 2px #ff8846
+    box-shadow: 0px 0px 0px 2px #ff8846;
 }
 
 .booking-form input[type="date"].form-control {
-    padding-top: 16px
+    padding-top: 16px;
 }
 
 .booking-form input[type="date"].form-control:invalid {
-    color: rgba(255, 255, 255, 0.5)
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .booking-form input[type="date"].form-control+.form-label {
     opacity: 1;
-    top: 10px
+    top: 10px;
 }
 
 .booking-form select.form-control {
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none
+    appearance: none;
 }
 
 .booking-form select.form-control:invalid {
-    color: rgba(255, 255, 255, 0.5)
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .booking-form select.form-control+.select-arrow {
@@ -480,18 +591,18 @@ body {
     text-align: center;
     pointer-events: none;
     color: rgba(255, 255, 255, 0.5);
-    font-size: 14px
+    font-size: 14px;
 }
 
 .booking-form select.form-control+.select-arrow:after {
-    content: '\279C';
+    content: "\279C";
     display: block;
     -webkit-transform: rotate(90deg);
-    transform: rotate(90deg)
+    transform: rotate(90deg);
 }
 
 .booking-form select.form-control option {
-    color: #000
+    color: #000;
 }
 
 .booking-form .form-label {
@@ -507,7 +618,7 @@ body {
     height: 15px;
     line-height: 15px;
     -webkit-transition: 0.2s all;
-    transition: 0.2s all
+    transition: 0.2s all;
 }
 
 .test {
@@ -523,16 +634,16 @@ body {
     height: 15px;
     line-height: 15px;
     -webkit-transition: 0.2s all;
-    transition: 0.2s all
+    transition: 0.2s all;
 }
 
 .booking-form .form-group.input-not-empty .form-control {
-    padding-top: 16px
+    padding-top: 16px;
 }
 
 .booking-form .form-group.input-not-empty .form-label {
     opacity: 0.5;
-    top: 10px
+    top: 10px;
 }
 
 .booking-form .submit-btn {
@@ -548,19 +659,34 @@ body {
     font-size: 16px;
     letter-spacing: 1.3px;
     -webkit-transition: 0.2s all;
-    transition: 0.2s all
+    transition: 0.2s all;
 }
 
 .booking-form .submit-btn:hover,
 .booking-form .submit-btn:focus {
-    opacity: 0.9
+    opacity: 0.9;
 }
 
 
-/* Search form */
+/*-------------------------------------------test order css-----------------------------------------------*/
+
+.menu .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
 
 
-/* Search form */
+/* media queries */
+
+
+/*---------------------------------CSS FOr Welcome page--------- food order------------------------------------*/
+
+.card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap: 1.5rem;
+}
 
 
 /* ================================================== */
@@ -619,20 +745,33 @@ body {
         background: #f1f7ed;
     }
 }
+
+
 /*-------------------------------------------test order css-----------------------------------------------*/
-.menu .box-container{
+
+.menu .box-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap:1.5rem;
+    gap: 1.5rem;
 }
+
+
+/*restaurant*/
+
+.restaurant .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 5fr));
+    gap: 1.5rem;
+}
+
 
 /* media queries */
 
+
 /*---------------------------------CSS FOr Welcome page--------- food order------------------------------------*/
 
-.slide{
+.card {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap:1.5rem;
-
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap: 1.5rem;
 }
