--- a/public/css/app.css
+++ b/public/css/app.css
@@ -250,7 +250,6 @@ header .icons #menu-bars {
     /* opacity: 0.6; */
 }
 
-
 .masthead-intro {
     /* Layout Declarations */
     margin-bottom: 0.1em;
@@ -263,7 +262,6 @@ header .icons #menu-bars {
 .introduction-section,
 .location-section,
 .questions-section {
-   
     max-width: 50em;
     margin-left: auto;
     margin-right: auto;
@@ -347,163 +345,152 @@ a {
     section>h1 {
         font-size: 2.5em;
     }
-} */
+}
+
+*/
 /*hbhkjbkbkbkkbkjkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk*/
-.home{
+
+.home {
     background-color: beige;
 }
+
 .u-section-1 .u-sheet-1 {
     background-color: beige;
     min-height: 720px;
-  }
-  
-  .u-section-1 .u-layout-wrap-1 {
+}
+
+.u-section-1 .u-layout-wrap-1 {
     margin-top: 60px;
     margin-bottom: -232px;
     margin-left: auto;
-  }
-  
-  .u-section-1 .u-image-1 {
+}
+
+.u-section-1 .u-image-1 {
     min-height: 600px;
     background-image: url("images/pexels-pixabay-259239.jpg");
     background-position: 50% 50%;
-  }
-  
-  .u-section-1 .u-container-layout-1 {
+}
+
+.u-section-1 .u-container-layout-1 {
     padding: 30px;
-  }
-  
-  .u-section-1 .u-layout-cell-2 {
+}
+
+.u-section-1 .u-layout-cell-2 {
     min-height: 600px;
-  }
-  
-  .u-section-1 .u-container-layout-2 {
+}
+
+.u-section-1 .u-container-layout-2 {
     padding: 30px 60px;
-  }
-  
-  .u-section-1 .u-text-1 {
+}
+
+.u-section-1 .u-text-1 {
     font-weight: 700;
     font-size: 3rem;
     font-style: normal;
     text-transform: none;
     margin: 51px auto 0 0;
-  }
-  
-  .u-section-1 .u-line-1 {
+}
+
+.u-section-1 .u-line-1 {
     width: 360px;
     height: 0;
     margin: 19px auto 0 0;
-  }
-  
-  .u-section-1 .u-text-2 {
+}
+
+.u-section-1 .u-text-2 {
     letter-spacing: 0px;
     line-height: 2;
     font-size: 3rem;
     margin: 43px 0 0;
-  }
-  
-  .u-section-1 .u-btn-1 {
+}
+
+.u-section-1 .u-btn-1 {
     border-style: none;
     font-weight: 700;
     font-size: 1.875rem;
     letter-spacing: 1px;
     margin: 19px auto 0 0;
     padding: 0;
-  }
-  
-  @media (max-width: 1199px) {
+}
+
+@media (max-width: 1199px) {
     .u-section-1 .u-sheet-1 {
-      min-height: 663px;
+        min-height: 663px;
     }
-  
     .u-section-1 .u-layout-wrap-1 {
-      margin-bottom: -184px;
-      margin-left: initial;
+        margin-bottom: -184px;
+        margin-left: initial;
     }
-  
     .u-section-1 .u-image-1 {
-      min-height: 495px;
+        min-height: 495px;
     }
-  
     .u-section-1 .u-layout-cell-2 {
-      min-height: 495px;
+        min-height: 495px;
     }
-  
     .u-section-1 .u-text-1 {
-      margin-top: 0;
+        margin-top: 0;
     }
-  
     .u-section-1 .u-line-1 {
-      width: 350px;
+        width: 350px;
     }
-  }
-  
-  @media (max-width: 991px) {
+}
+
+@media (max-width: 991px) {
     .u-section-1 .u-sheet-1 {
-      min-height: 727px;
+        min-height: 727px;
     }
-  
     .u-section-1 .u-layout-wrap-1 {
-      margin-bottom: -4px;
-      margin-left: initial;
+        margin-bottom: -4px;
+        margin-left: initial;
     }
-  
     .u-section-1 .u-image-1 {
-      min-height: 379px;
+        min-height: 379px;
     }
-  
     .u-section-1 .u-layout-cell-2 {
-      min-height: 100px;
+        min-height: 100px;
     }
-  
     .u-section-1 .u-container-layout-2 {
-      padding-left: 30px;
-      padding-right: 30px;
+        padding-left: 30px;
+        padding-right: 30px;
     }
-  
     .u-section-1 .u-line-1 {
-      width: 300px;
+        width: 300px;
     }
-  }
-  
-  @media (max-width: 767px) {
+}
+
+@media (max-width: 767px) {
     .u-section-1 .u-sheet-1 {
-      min-height: 1081px;
+        min-height: 1081px;
     }
-  
     .u-section-1 .u-layout-wrap-1 {
-      margin-bottom: 60px;
-      margin-left: initial;
+        margin-bottom: 60px;
+        margin-left: initial;
     }
-  
     .u-section-1 .u-image-1 {
-      min-height: 569px;
+        min-height: 569px;
     }
-  
     .u-section-1 .u-container-layout-1 {
-      padding-left: 10px;
-      padding-right: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
-  
     .u-section-1 .u-container-layout-2 {
-      padding-left: 10px;
-      padding-right: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
-  }
-  
-  @media (max-width: 575px) {
+}
+
+@media (max-width: 575px) {
     .u-section-1 .u-sheet-1 {
-      min-height: 870px;
+        min-height: 870px;
     }
-  
     .u-section-1 .u-image-1 {
-      min-height: 358px;
+        min-height: 358px;
     }
-  
     .u-section-1 .u-text-1 {
-      font-size: 1.5rem;
+        font-size: 1.5rem;
     }
-  }
+}
+
 
 /*---------------------------------------------------cart---------------------------------------------------------------------------------*/
 
@@ -607,10 +594,30 @@ header .icons .dropdown .cart-count {
     top: 7px;
 }
 
-header .icons a .btn {
-    position: absolute;
-    left: 35px;
-    top: 7px;
+header .icons .checkout .button {
+    background-color: var(--primary);
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    height: 40px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
 
